--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 
     <link rel="stylesheet" href="css/style.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Catamaran|Cinzel|Dancing+Script|Indie+Flower|Lato|Lobster&display=swap"
+      href="https://fonts.googleapis.com/css?family=Asap|Rubik|Satisfy&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Asap|Dancing+Script|Great+Vibes|Rubik|Satisfy&display=swap"
       rel="stylesheet"
     />
 
@@ -27,70 +31,202 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"
+    />
   </head>
   <body>
-    <nav
-      class="navbar navbar-expand-lg navbar-light"
-      style="background-color: #8cd8ca;"
-    >
-      <a class="navbar-brand" href="#">FN</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <header>
+      <div class="wrapper">
+        <h1 class="animated fadeInRightBig delay-0s">Projects by Farjana</h1>
+        <p>
+          I am Full Stack Developer and this is my work Portfolio.
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#"
-              >About <span class="sr-only">(current)</span></a
-            >
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#"
-              >Skills <span class="sr-only">(current)</span></a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-
-          <li class="nav-item dropdown">
+          <span class="inline-block">
             <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
+              href="https://www.linkedin.com/in/farjana-yasmin-nipa/"
+              rel="nofollow"
+              target="_blank"
+              >Farjana Nipa</a
             >
-              Portfolio
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
+          </span>
+        </p>
+        <nav>
+          <ul>
+            <li>
+              <a href="/about">About Me</a>
+            </li>
+            <li>
+              <a href="/skills">Skills</a>
+            </li>
+            <li>
+              <a href="/portfolio">Portfolio</a>
+            </li>
+            <li>
+              <a href="/contact">Contact</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    
+    <div class="wrapper2">
+    <div class="large circle one"></div>
+    <div class="large circle two"></div>
+    <div class="large circle three"></div>
+    <div class="large circle four"></div>
+    <div class="large circle five"></div>
+    <div class="large circle six"></div>
+    <div class="large circle seven"></div>
+    <div class="large circle eight"></div>
+
+    <div class="aboutme">
+      <h2>About Me</h2>
+      <p>
+        Hello, I am a Full Stack Web Developer Driven by my constant curiosity,
+        I am always searching for opportunities to create, optimize and deliver
+        exceptional results. From a Research Assistant to a Full Stack Web
+        Developer, I am determined to explore, learn and implementing new tools
+        and technologies. I am a quick learner, work best in high-paced
+        environments, and driven to help any team that I am a part of to be the
+        best that it can be by pushing boundaries and challenging what’s
+        expected.<br class="github" />Check out my code:
+        https://github.com/nipa04
+        <br class="mail" />
+        Feel free to reach me at nipa.farjana04@gmail.com
+      </p>
+    </div>
+    <div class="skills">
+      <div
+        id="carouselExampleCaptions"
+        class="carousel slide"
+        data-ride="carousel"
+      >
+        <ol class="carousel-indicators">
+          <li
+            data-target="#carouselExampleCaptions"
+            data-slide-to="0"
+            class="active"
+          ></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="./images/four-letter-tiles-1591061.jpg"
+              class="d-block w-100"
+              alt="1"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>First slide label</h5>
+              <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
             </div>
-          </li>
-          <li class="nav-item"></li>
-        </ul>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./images/hitesh-choudhary-D9Zow2REm8U-unsplash.jpg"
+              class="d-block w-100"
+              alt="2"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./images/javascript-4523100_1920.jpg"
+              class="d-block w-100"
+              alt="3"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>
+                Praesent commodo cursus magna, vel scelerisque nisl consectetur.
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./images/logo-2582747_1920.png"
+              class="d-block w-100"
+              alt="4"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>
+                Praesent commodo cursus magna, vel scelerisque nisl consectetur.
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./images/luke-chesser-LG8ToawE8WQ-unsplash.jpg"
+              class="d-block w-100"
+              alt="5"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>
+                Praesent commodo cursus magna, vel scelerisque nisl consectetur.
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./images/marvin-meyer-SYTO3xs06fU-unsplash.jpg"
+              class="d-block w-100"
+              alt="6"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>
+                Praesent commodo cursus magna, vel scelerisque nisl consectetur.
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./images/pankaj-patel-ZV_64LdGoao-unsplash.jpg"
+              class="d-block w-100"
+              alt="7"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>
+                Praesent commodo cursus magna, vel scelerisque nisl consectetur.
+              </p>
+            </div>
+          </div>
+        </div>
+        <a
+          class="carousel-control-prev"
+          href="#carouselExampleCaptions"
+          role="button"
+          data-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a
+          class="carousel-control-next"
+          href="#carouselExampleCaptions"
+          role="button"
+          data-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
-    </nav>
-    <section class="header">
-      <div class="head-point">
-        <h1>Farjana Nipa</h1>
-        <p>Front End Developer</p>
-      </div>
-    </section>
+    </div>
+
+    <footer>
+      <p>Copyright © Farjana Nipa 2019.</p>
+      <p>Generated using Html-CSS only. 100% JavaScript-free.</p>
+      <p></p>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
