--- a/index.html
+++ b/index.html
@@ -70,19 +70,9 @@
         </nav>
       </div>
     </header>
-    
-    <div class="wrapper2">
-    <div class="large circle one"></div>
-    <div class="large circle two"></div>
-    <div class="large circle three"></div>
-    <div class="large circle four"></div>
-    <div class="large circle five"></div>
-    <div class="large circle six"></div>
-    <div class="large circle seven"></div>
-    <div class="large circle eight"></div>
 
     <div class="aboutme">
-      <h2>About Me</h2>
+      <h1>About Me</h1>
       <p>
         Hello, I am a Full Stack Web Developer Driven by my constant curiosity,
         I am always searching for opportunities to create, optimize and deliver
@@ -91,13 +81,18 @@
         and technologies. I am a quick learner, work best in high-paced
         environments, and driven to help any team that I am a part of to be the
         best that it can be by pushing boundaries and challenging what’s
-        expected.<br class="github" />Check out my code:
-        https://github.com/nipa04
+        expected.
+
+        <br class="github" />Check out my code:
+        <a href="https://github.com/nipa04">https://github.com/nipa04</a>
+
         <br class="mail" />
-        Feel free to reach me at nipa.farjana04@gmail.com
+        Feel free to reach me at <p class="mail">nipa.farjana04@gmail.com</p>
       </p>
     </div>
-    <div class="skills">
+
+    <!-- <div class="skills">
+      <h2>Skills</h2>
       <div
         id="carouselExampleCaptions"
         class="carousel slide"
@@ -120,7 +115,7 @@
               alt="1"
             />
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
+              <h5>HTML</h5>
               <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
             </div>
           </div>
@@ -131,7 +126,7 @@
               alt="2"
             />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
+              <h5>Python</h5>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
           </div>
@@ -142,7 +137,7 @@
               alt="3"
             />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
+              <h5>JavaScript</h5>
               <p>
                 Praesent commodo cursus magna, vel scelerisque nisl consectetur.
               </p>
@@ -150,12 +145,12 @@
           </div>
           <div class="carousel-item">
             <img
-              src="./images/logo-2582747_1920.png"
+              src="./images/css3-1841488_1920.jpg"
               class="d-block w-100"
               alt="4"
             />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
+              <h5>CSS</h5>
               <p>
                 Praesent commodo cursus magna, vel scelerisque nisl consectetur.
               </p>
@@ -168,7 +163,7 @@
               alt="5"
             />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
+              <h5>React</h5>
               <p>
                 Praesent commodo cursus magna, vel scelerisque nisl consectetur.
               </p>
@@ -181,7 +176,7 @@
               alt="6"
             />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
+              <h5>TeamWork</h5>
               <p>
                 Praesent commodo cursus magna, vel scelerisque nisl consectetur.
               </p>
@@ -194,7 +189,7 @@
               alt="7"
             />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
+              <h5>Gitlab</h5>
               <p>
                 Praesent commodo cursus magna, vel scelerisque nisl consectetur.
               </p>
@@ -221,11 +216,67 @@
         </a>
       </div>
     </div>
+   
+
+     <div class="wrapper2">
+      <div class="large circle one">1</div>
+      <div class="large circle two">2</div>
+      <div class="large circle three">3</div>
+      <div class="large circle four">4</div>
+      <div class="large circle five"></div>
+      <div class="large circle six"></div>
+      <div class="large circle seven"></div>
+      <div class="large circle eight"></div>
+    </div> -->
+
+    <section class="contact">
+      <div class="row">
+        <div class="col-md-12">
+          <h1>Contact</h1>
+          <p id="contactp">
+            I would love to work with you on your upcoming projects. Send me a
+            line and I will get back to you as soon as possible! hello [at]
+            nipa-farjana.com
+          </p>
+        </div>
+      </div>
+
+      <form>
+        <div class="form-group col-md-12">
+          <div class="row">
+            <div class="col">
+              <label for="inputEmail4">Email</label>
+              <input type="email" class="form-control" id="inputEmail4" />
+            </div>
+            <div class="form-group col-md-6">
+              <label for="inputEmail4">Name</label>
+              <input type="text" class="form-control" />
+            </div>
+          </div>
+        </div>
+        <div class="form-group col-md-12">
+          <div class="mb-3">
+            <label for="validationTextarea">Message</label>
+
+            <textarea
+              class="form-control is-valid-black"
+              id="validationTextarea"
+              placeholder="write your message"
+              required
+            ></textarea>
+          </div>
+        </div>
+        <div class="col-sm-10">
+          <button type="submit" class="btn btn-lg">
+            Submit
+          </button>
+        </div>
+      </form>
+    </section>
 
     <footer>
       <p>Copyright © Farjana Nipa 2019.</p>
       <p>Generated using Html-CSS only. 100% JavaScript-free.</p>
-      <p></p>
     </footer>
 
     <!-- Optional JavaScript -->
