--- a/index.html
+++ b/index.html
@@ -101,6 +101,25 @@
       <div class="large circle seven"></div>
       <div class="large circle eight"></div>
     </div>
+    <div class="skills">
+      <h1> Skills</h1>
+      <div class="skills-flex">
+        <div class="flex"> HTML</div>
+        <div class="flex">CSS</div>
+        <div class="flex">Javascript</div>
+        <div class="flex">Python</div>
+        <div class="flex">React Js</div>
+        <div class="flex">Django</div>
+        <div class="flex">API</div>
+        <div class="flex">Bootstrap</div>
+        <div class="flex">Postgresql</div>
+        <div class="flex">Team Work</div>
+        <!-- <div class="flex">Problem Solving</div> -->
+        <div class="flex">Github</div>
+        <div class="flex"> Material UI</div>
+      </div>
+
+    </div>
 
     <div class="portfolio">
       <h1>Portfolio</h1>
