--- a/index.html
+++ b/index.html
@@ -126,25 +126,29 @@
       <div class="row row-cols-1 row-cols-md-2">
         <div class="col mb-4">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="Assets/carfinder.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Car Finder</h5>
               <p>Stack: API, ReactJS, Bootstrap, HTML & CSS</p>
               <p class="card-text"> Learning component practicing composition using ReactJS, system design, and the architectural pattern is some
               achievement.
+              <button id="project1"><a class="car" href="https://nipa04.github.io/carfinder-app/">See Project</a></button>
+
              
             </div>
           </div>
         </div>
         <div class="col mb-4">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="Assets/eventloop.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Event Loop</h5>
               <p>Tech: Django | Django REST | React | AJAX | Bootstrap | Material UI | Google Maps API | Blog TO API</p>
               <p class="card-text">A location-based app for discovering nearby events in Toronto. User can explore close-by events on a map, check the
               details of the events, as well as filter events based on interests. Based on blogTO's events API.
               </p>
+              <button id="project1"><a class="car" href="https://github.com/christinegithub/event-loop">See Project</a></button>
+
             </div>
           </div>
         </div>
@@ -152,13 +156,15 @@
     
         <div class="col mb-4">
           <div class="card">
-            <img src="..." class="card-img-top" alt="hello">
+            <img src="Assets/findtable.png" class="card-img-top" alt="hello">
             <div class="card-body">
               <h5 class="card-title">seat_yourself_django</h5>
               <p>Tech: Django | Python | HTML | CSS</p>
               <p class="card-text">A restaurant-based app where user can find restaurants, check details of the restaurants, also filter restaurants based
               on cuisine .
                 </p>
+                <button id="project1"><a class="car" href="https://github.com/nipa04/seat_yourself_django">See Project</a></button>
+
             </div>
           </div>
         </div>
