--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
     </header>
 
     <div class="aboutme">
-      <h1>About Me</h1>
+      <div><h1>About Me</h1></div>
+      <div class="aboutmeflex">
+      <div class="flex1"><img src="Assets/myAvatar.png" alt=""></div>
+      <div class="flex2">
       <p>
         Hello, I am a Full Stack Web Developer Driven by my constant curiosity,
         I am always searching for opportunities to create, optimize and deliver
@@ -89,6 +92,8 @@
         <br class="mail" />
         Feel free to reach me at <p class="mail">nipa.farjana04@gmail.com</p>
       </p>
+    </div>
+  </div>
     </div>
 
     <div class="wrapper2">
@@ -147,7 +152,7 @@
               <p class="card-text">A location-based app for discovering nearby events in Toronto. User can explore close-by events on a map, check the
               details of the events, as well as filter events based on interests. Based on blogTO's events API.
               </p>
-              <button id="project1"><a class="car" href="https://github.com/christinegithub/event-loop">See Project</a></button>
+              <button id="project1"><a class="car" href="https://github.com/nipa04/event-loop">See Project</a></button>
 
             </div>
           </div>
