--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               <h5 class="card-title">Car Finder</h5>
               <p>Stack: API, ReactJS, Bootstrap, HTML & CSS</p>
               <p class="card-text"> Learning component practicing composition using ReactJS, system design, and the architectural pattern is some
-              achievement.
+              achievement. </p>
               <button id="project1"><a class="car" href="https://nipa04.github.io/carfinder-app/">See Project</a></button>
 
              
