--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Lobster&family=Montserrat&family=Open+Sans:wght@600&family=Oswald&family=Play&family=Roboto&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Allura&family=EB+Garamond&family=Great+Vibes&family=Kaushan+Script&family=Lobster&family=Marck+Script&family=Montserrat&family=Open+Sans:wght@600&family=Oswald&family=Play&family=Roboto&family=Satisfy&display=swap" rel="stylesheet">
-
-  <title>Document</title>
+  
+  <title>Farjana Nipa WebSite</title>
 </head>
 <body>
     <div class="nav-container">
@@ -25,7 +25,7 @@
         <div class="nav-ul">
         <ul class="navbar-nav ">
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="http://127.0.0.1:5502/index.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Projects</a>
@@ -81,14 +81,21 @@
 
     <div class="container-fluid3">
       <h2>I can help.</h2>
-      <h3>I’m currently available for freelance work.</h3>
+      <h3>I’m currently available for full-time and contractual jobs.</h3>
       <p>If you have a project that you want to get started, think you need my help <br>with something or just fancy saying hey, then get in touch.</p>
-      <button>MESSAGE ME</button>
+      <a href="https://mail.google.com/mail/nipa.farjana04@gmail.com"> <button><i class="far fa-envelope"></i>MESSAGE ME</button></a>
+      <i class="far fa-envelope"></i>
     </div>
 
     <div class="footer">
-      <p>© 2020 Farjana Nipa. All rights reserved.</p>
-
+      <div class="foot">
+      <a class="links" href="https://www.linkedin.com/in/farjana-yasmin-nipa/">linkedin</a>
+      <a class="links" href="https://github.com/nipa04">github</a>
+      <a class="links" href="https://twitter.com/FarjanaNipa6">twitter</a>
+   
+      </div>
+      <p>© 2020 <a href="farjana-nipa.com">Farjana Nipa.</a> All rights reserved.</p>
+      
     </div>
   
 </body>
