--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <img id="cloud2" src="Assets/cloudy.png" alt="logo" style="width:160px;">
     </div>
     <div class="palace">
-      <img src="Assets/palace.png" alt="logo" style="width:600px;">
+      <img src="Assets/palace.png" alt="logo"  style="width:500px;">
 
     </div>
 
@@ -61,8 +61,10 @@
     </div>
     <div class="container-flex">
       <h2>What I can do.</h2>
-      <div class="flex1">  
+      <div class="flex1"> 
+        <div>
         <img id="avatar" src="Assets/myAvatar2.png" alt="logo" style="width:150px;">
+        </div>
         <div class="flex1-1">
         <h3>Design what you want.</h3>
         <p>I like to keep it simple. My goals are to focus on<br> typography, content and conveying the message <br>that you want to send.</p>
@@ -74,7 +76,7 @@
         <h3>Develop what you need.</h3>
         <p>I'm a developer, so I know how to create your<br> website to run across devices using the latest<br> technologies available.</p>
         </div>
-        <img id="avatar" src="Assets/myAvatar2.png" alt="logo" style="width:150px;">
+        <div><img id="avatar" src="Assets/myAvatar2.png" alt="logo" style="width:150px;"></div>
       </div>
 
     </div>
