--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="nav-ul">
         <ul class="navbar-nav ">
           <li class="nav-item">
-            <a class="nav-link" href="http://127.0.0.1:5502/index.html">About</a>
+            <a class="nav-link" href="https://www.farjana-nipa.com/index.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Projects</a>
@@ -85,8 +85,8 @@
       <h2>I can help.</h2>
       <h3>I’m currently available for full-time and contractual jobs.</h3>
       <p>If you have a project that you want to get started, think you need my help <br>with something or just fancy saying hey, then get in touch.</p>
-      <a href="https://mail.google.com/mail/nipa.farjana04@gmail.com"> <button><i class="far fa-envelope"></i>MESSAGE ME</button></a>
-      <i class="far fa-envelope"></i>
+      <a href="https://mail.google.com/mail/nipa.farjana04@gmail.com"> <button>MESSAGE ME</button></a>
+     
     </div>
 
     <div class="footer">
@@ -96,7 +96,7 @@
       <a class="links" href="https://twitter.com/FarjanaNipa6">twitter</a>
    
       </div>
-      <p>© 2020 <a href="farjana-nipa.com">Farjana Nipa.</a> All rights reserved.</p>
+      <p>© 2020 <a href="https://www.farjana-nipa.com">Farjana Nipa.</a> All rights reserved.</p>
       
     </div>
   
