--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       <p>a web developer</p>
       <img id="cloud2" src="Assets/cloudy.png" alt="logo" style="width:160px;">
     </div>
-    <div class="palace">
-      <img src="Assets/palace.png" alt="logo"  style="width:500px;">
+    <div class="container-fluid">
+      <img id="palace" src="Assets/palace.png" alt="logo"  style="width:50%;">
 
     </div>
 
@@ -59,7 +59,7 @@
         to <br>create for web and mobile devices.</p>
 
     </div>
-    <div class="container-flex">
+    <div class="container-fluid4">
       <h2>What I can do.</h2>
       <div class="flex1"> 
         <div>
@@ -67,14 +67,14 @@
         </div>
         <div class="flex1-1">
         <h3>Design what you want.</h3>
-        <p>I like to keep it simple. My goals are to focus on<br> typography, content and conveying the message <br>that you want to send.</p>
+        <p>I like to keep it simple. My goals are to focus on typography, content and conveying the message that you want to send.</p>
       </div>
       </div>
       <div class="flex2">
         
         <div class="flex2-1">
         <h3>Develop what you need.</h3>
-        <p>I'm a developer, so I know how to create your<br> website to run across devices using the latest<br> technologies available.</p>
+        <p>I'm a developer, so I know how to create your website to run across devices using the latest technologies available.</p>
         </div>
         <div><img id="avatar" src="Assets/myAvatar2.png" alt="logo" style="width:150px;"></div>
       </div>
