--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a class="nav-link" href="https://www.farjana-nipa.com/works.html">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./notes.html">Notes</a>
+            <a class="nav-link" href="https://www.farjana-nipa.com/notes.html">Notes</a>
           </li>
         </ul>
       </div>
@@ -45,7 +45,9 @@
       <img id="cloud2" src="Assets/cloudy.png" alt="logo" style="width:160px;">
     </div>
     <div class="container-fluid">
+      <img id="flagP1" src="Assets/pole-clipart-golf-flag-7-original.png" alt="logo"  style="width:150px;">
       <img id="palace" src="Assets/palace.png" alt="logo"  style="width:45%;">
+      <img id="flagP2" src="Assets/pole-clipart-golf-flag-7-original.png" alt="logo"  style="width:150px;">
 
     </div>
 
