--- a/index.html
+++ b/index.html
@@ -38,16 +38,17 @@
       </nav>
   
     <div class="container-fluid">
-      <img id="cloud1" src="Assets/cloudy.png" alt="logo" style="width:160px;">
+      <img id="cloud1" src="Assets/cloudy.png" alt="logo" style="width:15%;">
 
       <h2>I'm Farjana.</h2>
       <p>a web developer</p>
-      <img id="cloud2" src="Assets/cloudy.png" alt="logo" style="width:160px;">
+      <img id="cloud2" src="Assets/cloudy.png" alt="logo" style="width:15%;">
     </div>
     <div class="container-fluid">
-      <img id="flagP1" src="Assets/pole-clipart-golf-flag-7-original.png" alt="logo"  style="width:150px;">
-      <img id="palace" src="Assets/palace.png" alt="logo"  style="width:45%;">
-      <img id="flagP2" src="Assets/pole-clipart-golf-flag-7-original.png" alt="logo"  style="width:150px;">
+      <img id="flagP1" src="Assets/pole-clipart-golf-flag-7-original.png" alt="logo"  style="width:10%;">
+
+      <img id="palace" src="Assets/palace.png" alt="logo"  style="width: 45%;">
+      <img id="flagP2" src="Assets/pole-clipart-golf-flag-7-original.png" alt="logo"  style="width:10%;"> 
 
     </div>
 
