--- a/notes.html
+++ b/notes.html
@@ -37,15 +37,15 @@
         </nav>
     
       <div class="container-fluid">
-        <img id="cloud1" src="Assets/cloudy.png" alt="logo" style="width:160px;margin-top:-1%;">
+        <img id="cloud1" src="Assets/cloudy.png" alt="logo" style="width:15%;margin-top:-1%;">
   
         <h2>Notes</h2>
        
-        <img id="cloud2" src="Assets/cloudy.png" alt="logo" style="width:160px;">
+        <img id="cloud2" src="Assets/cloudy.png" alt="logo" style="width:15%;">
       </div>
       <div class="container-fluid">
-        <img id="flag1" src="Assets/pole-clipart-golf-flag-7-original.png" alt="logo"  style="width:150px;">
-        <img id="flag2" src="Assets/pole-clipart-golf-flag-7-original.png" alt="logo"  style="width:150px;">
+        <img id="flag1" src="Assets/pole-clipart-golf-flag-7-original.png" alt="logo"  style="width:15%;">
+        <img id="flag2" src="Assets/pole-clipart-golf-flag-7-original.png" alt="logo"  style="width:15%;margin-left:10%;">
 
       </div>
   
