--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-
   <link rel="stylesheet" href="css/style.css" />
   <link>
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Lobster&family=Montserrat&family=Open+Sans:wght@600&family=Oswald&family=Play&family=Roboto&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Allura&family=EB+Garamond&family=Great+Vibes&family=Kaushan+Script&family=Lobster&family=Marck+Script&family=Montserrat&family=Open+Sans:wght@600&family=Oswald&family=Play&family=Roboto&family=Satisfy&display=swap" rel="stylesheet">
@@ -66,7 +65,7 @@
       <h2>What I can do.</h2>
       <div class="flex1"> 
         <div>
-        <img id="avatar" src="Assets/myAvatar2.png" alt="logo" style="width:150px;">
+        <img id="avatar" src="Assets/myAvatar2.png" alt="logo" style="width:70%;">
         </div>
         <div class="flex1-1">
         <h3>Design what you want.</h3>
@@ -79,7 +78,7 @@
         <h3>Develop what you need.</h3>
         <p>I'm a developer, so I know how to create your website to run across devices using the latest technologies available.</p>
         </div>
-        <div><img id="avatar" src="Assets/myAvatar2.png" alt="logo" style="width:150px;"></div>
+        <div><img id="avatar" src="Assets/myAvatar2.png" alt="logo" style="width:70%;"></div>
       </div>
 
     </div>
