--- a/notes.html
+++ b/notes.html
@@ -51,12 +51,21 @@
   
     </div>
 
+   
+
     <div class="container-fluid2">
         <!-- <img src="Assets/cloudy.png" alt=""> -->
         <h3>Life, design, work.</h3>
-        <p> Here's a selection of some recent work. For more up <br>to the minute work you can visit me on github account.</p>
-
+        
     </div>
+
+    <div class="container-fluid7">
+        <h2>My Skills</h2>
+       <div>Html</div>
+       <div>CSS</div>
+       <div>React</div>
+    </div>
+
 
 
     <div class="container-fluid3">
