--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css" />
   <link>
+  
+  <link rel="icon" type="image/png" href="Assets/myAvatar.png.">
+  
+<!-- <link rel="icon" type="image/png" href="https://example.com/favicon.png"/> -->
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Lobster&family=Montserrat&family=Open+Sans:wght@600&family=Oswald&family=Play&family=Roboto&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Allura&family=EB+Garamond&family=Great+Vibes&family=Kaushan+Script&family=Lobster&family=Marck+Script&family=Montserrat&family=Open+Sans:wght@600&family=Oswald&family=Play&family=Roboto&family=Satisfy&display=swap" rel="stylesheet">
+
   
   <title>Farjana's Portfolio</title>
 </head>
