--- a/works.html
+++ b/works.html
@@ -106,7 +106,7 @@
       <p id="para">
         Build a site static for eBay. eBay doesn’t support JS Responsive site. Only css used to make it stylish and animate, which was quite challenging.
       </p>
-      <button>     <a href="https://github.com/nipa04/event-loop">VIEW PROJECT</a>
+      <button>     <a href="https://github.com/nipa04/ebay-project">VIEW PROJECT</a>
       </button>
 
     </div>
