--- a/works.html
+++ b/works.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Lobster&family=Montserrat&family=Open+Sans:wght@600&family=Oswald&family=Play&family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Allura&family=EB+Garamond&family=Great+Vibes&family=Kaushan+Script&family=Lobster&family=Marck+Script&family=Montserrat&family=Open+Sans:wght@600&family=Oswald&family=Play&family=Roboto&family=Satisfy&display=swap" rel="stylesheet">
-    
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" 
+        href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" 
+        integrity="sha384- 
+        B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" 
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <title>Farjana's Portfolio</title>
 </head>
 <body>
@@ -119,7 +125,7 @@
       <h2>I can help.</h2> 
       <h3>I’m currently available for full-time and contractual jobs.</h3>
       <p>If you have a project that you want to get started, think you need my help <br>with something or just fancy saying hey, then get in touch.</p>
-      <a href="mailto:nipa.farjana04@gmail.com"> <button>MESSAGE ME</button></a>
+      <a href="mailto:nipa.farjana04@gmail.com"> <button> <i class="far fa-envelope"></i>MESSAGE ME</button></a>
      
     </div>
 
