--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     <div class="container-fluid2">
       <img id="avatar" src="Assets/myAvatar2.png" alt="logo" style="width:150px;">
       <h3>Hi.</h3>
-      <p>I'm a web designer / developer based in Toronto,<br> Canada.
+      <p>I'm a web designer / developer based in Toronto,Canada.
         I have a passion for web design and love 
-        to <br>create for web and mobile devices.</p>
+        to create for web and mobile devices.</p>
 
     </div>
     <div class="container-fluid4">
