--- a/works.html
+++ b/works.html
@@ -124,7 +124,7 @@
     <div class="container-fluid3">
       <h2>I can help.</h2> 
       <h3>I’m currently available for full-time and contractual jobs.</h3>
-      <p>If you have a project that you want to get started, think you need my help <br>with something or just fancy saying hey, then get in touch.</p>
+      <p>If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get in touch.</p>
       <a href="mailto:nipa.farjana04@gmail.com"> <button> <i class="far fa-envelope"></i>     MESSAGE ME</button></a>
      
     </div>
