--- a/index.html
+++ b/index.html
@@ -73,7 +73,35 @@
     </div>
     <div class="container-fluid4">
       <h2>What I can do.</h2>
-      <div class="flex1"> 
+     <div class="flex1">
+       <div class="flex1-1">
+        <img id="avatar" src="Assets/myAvatar2.png" alt="logo" style="width:70%;">
+       </div>
+       <div class="flex1-2">
+        <h3>Design what you want.</h3>
+
+        <p>I like to keep it simple. My goals are to focus on typography, content and conveying the message that you want to send.</p>
+
+       </div>
+
+     </div>
+     <div class="flex2">
+      <div class="flex2-1">
+        <h3>Design what you want.</h3>
+
+        <p>I like to keep it simple. My goals are to focus on typography, content and conveying the message that you want to send.</p>
+
+       </div>
+       <div class="flex2-2">
+        <img id="avatar" src="Assets/myAvatar2.png" alt="logo" style="width:70%;">
+
+       
+       </div>
+
+     </div>
+
+
+      <!-- <div class="flex1"> 
         <div>
         <img id="avatar" src="Assets/myAvatar2.png" alt="logo" style="width:70%;">
         </div>
@@ -89,14 +117,14 @@
         <p>I'm a developer, so I know how to create your website to run across devices using the latest technologies available.</p>
         </div>
         <div><img id="avatar" src="Assets/myAvatar2.png" alt="logo" style="width:70%;"></div>
-      </div>
+      </div> -->
 
     </div>
 
     <div class="container-fluid3">
       <h2>I can help.</h2>
       <h3>I’m currently available for full-time and contractual jobs.</h3>
-      <p>If you have a project that you want to get started, think you need my help <br> with something or just fancy saying hey, then get in touch.</p>
+      <p>If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get in touch.</p>
       <a href="mailto:nipa.farjana04@gmail.com"> <button> <i class="far fa-envelope"></i>      MESSAGE ME</button></a>
      
     </div>
