--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
      </div>
      <div class="flex2">
       <div class="flex2-1">
-        <h3>Design what you want.</h3>
+        <h3> Develop what you need.</h3>
 
-        <p>I like to keep it simple. My goals are to focus on typography, content and conveying the message that you want to send.</p>
+        <p>I'm a developer, so I know how to create your website to run across devices using the latest technologies available.</p>
 
        </div>
        <div class="flex2-2">
