--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="css/style.css" />
   <link>
   
-  <link rel="icon" type="image/png" href="Assets//myAvatar.png">
+  <link rel="icon" type="image/png" href="Assets/myAvatar (4).png" >
   
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
