--- a/works.html
+++ b/works.html
@@ -33,7 +33,7 @@
               <a class="nav-link" href="https://www.farjana-nipa.com/index.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://www.farjana-nipa.com/works.html">Projects</a>
+              <a class="nav-link" href="https://www.farjana-nipa.com/works.html">Work</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://www.farjana-nipa.com/notes.html">Notes</a>
