--- a/works.html
+++ b/works.html
@@ -73,7 +73,8 @@
       achievement. Using Github and Travis CI implemented complete CI/CD
       workflow as a proof of build and release management skills.
       </p>
-      <button>     <a href="https://nipa04.github.io/carfinder-app/">VIEW PROJECT</a>
+      <button>     
+        <a href="https://nipa04.github.io/carfinder-app/">VIEW PROJECT</a>
       </button>
       
 
