--- a/notes.html
+++ b/notes.html
@@ -42,16 +42,16 @@
         </div>
         </nav>
     
-      <div class="container-fluid">
-        <img id="cloud1" src="Assets/cloudy.png" alt="logo" style="width:15%;margin-top:-1%;">
+      <div class="container-fluidnote">
+        <img id="cloud1" src="Assets/cloudy.png" alt="logo" style="width:13%;margin-top:-1%;">
   
         <h2>Notes</h2>
        
-        <img id="cloud2" src="Assets/cloudy.png" alt="logo" style="width:15%;">
+        <img id="cloud2" src="Assets/cloudy.png" alt="logo" style="width:13%;">
       </div>
-      <div class="container-fluid">
-        <img id="flag1" src="Assets/pole-clipart-golf-flag-7-original.png" alt="logo"  style="width:15%;">
-        <img id="flag2" src="Assets/pole-clipart-golf-flag-7-original.png" alt="logo"  style="width:15%;margin-left:10%;">
+      <div class="container-fluidnote">
+        <img id="flagn1" src="Assets/pole-clipart-golf-flag-7-original.png" alt="logo"  style="width:12%;">
+        <img id="flagn2" src="Assets/pole-clipart-golf-flag-7-original.png" alt="logo"  style="width:12%;margin-left:10%;">
 
       </div>
   
