--- a/notes.html
+++ b/notes.html
@@ -61,7 +61,7 @@
 
     <div class="container-fluid2">
         <!-- <img src="Assets/cloudy.png" alt=""> -->
-        <h2> The works continues ...</h2>
+        <h2> More works are coming...</h2>
         <h3 id="noteh3">Life, design, work.</h3>
         
     </div>
