--- a/works.html
+++ b/works.html
@@ -93,7 +93,7 @@
       <p> Stack: HTML & CSS, Python ,Django</p>
       <p id="para">As an exploration in product design and architecture I have been working on an idea for a restaurant reservation system. Thoroughly challenging thinking through the product design but ultimately rewarding.
       </p>
-      <button style="background-color: #4299ED;">     <a href="https://github.com/nipa04/seat_yourself_django">VIEW PROJECT</a>
+    <button id ="blue">     <a href="https://github.com/nipa04/seat_yourself_django">VIEW PROJECT</a>
       </button>
     </div>
 
