--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <meta property="og:image" content="Assets/portfolioView.png"/>
   <link rel="stylesheet" href="css/style.css" />
   <link>
   
   <link rel="icon" type="image/png" href="Assets/myAvatar (4).png" >
-  
+ 
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Lobster&family=Montserrat&family=Open+Sans:wght@600&family=Oswald&family=Play&family=Roboto&display=swap" rel="stylesheet">
