--- a/notes.html
+++ b/notes.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
+    <meta property="og:image" content="Assets/portfolioView.png"/>
     <link rel="stylesheet" href="css/style.css" />
     <link>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
