--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
     </div>
     <div class="container-fluid">
       <img id="flagP1" src="Assets/pole-clipart-golf-flag-7-original.png" alt="logo"  style="width:15%;">
-
+      
       <img id="palace" src="Assets/palace.png" alt="logo"  style="width: 40%;">
+ 
       <img id="flagP2" src="Assets/pole-clipart-golf-flag-7-original.png" alt="logo"  style="width:15%;"> 
 
     </div>
@@ -131,11 +132,11 @@
 
     <div class="footer">
       <div class="foot">
-      <a class="links" href="https://www.linkedin.com/in/farjana-yasmin-nipa/">linkedin</a>
-      <a class="links" href="https://github.com/nipa04">github</a>
-      <a class="links" href="https://twitter.com/FarjanaNipa6">twitter</a>
+      <a class="links" href="https://www.linkedin.com/in/farjana-yasmin-nipa/"> <i class="fab fa-linkedin" style="font-size: 50px;"></i></a>
+      <a class="links" href="https://github.com/nipa04"> <i class="fab fa-github" style="font-size: 50px;" ></i></a>
+      <a class="links" href="https://twitter.com/FarjanaNipa6"><i class="fab fa-twitter-square" style="font-size: 50px;"></i></a>
     </div>
-      <p>© 2020 <a href="https://www.farjana-nipa.com">Farjana Nipa.</a> All rights reserved.</p>
+      <p>© 2020 <a id="footlink" href="https://www.farjana-nipa.com" >Farjana Nipa.</a> All rights reserved.</p>
     </div>
   
 </body>
