--- a/works.html
+++ b/works.html
@@ -58,7 +58,7 @@
     </div>
 
     <div class="container-fluid5">
-      <img src="Assets/neworange.png" alt="logo" style="width: 8%;">
+      <img src="Assets/neworange.png" alt="logo" style="width: 150px;background-color: #F3F2F1;">
       
       <h3>What I've been up to.</h3>
       <p id="para"> Here's a selection of some recent work. For more up to the minute work you can visit me on <a href="https://github.com/nipa04">github</a>.</p>
