--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
         
         <div class="nav-ul">
         <ul class="navbar-nav">
-          <li class="nav-item">
+          <li class="nav-item" style="padding-right: 8%;">
             <a class="nav-link" href="https://www.farjana-nipa.com/index.html">About</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://www.farjana-nipa.com/works.html">Work</a>
+          <li class="nav-item" style="padding-right: 8%;">
+            <a class="nav-link" href="https://www.farjana-nipa.com/works.html" >Work</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" style="padding-right: 8%;">
             <a class="nav-link" href="https://www.farjana-nipa.com/notes.html">Notes</a>
           </li>
         </ul>
