--- a/notes.html
+++ b/notes.html
@@ -31,13 +31,13 @@
           
           <div class="nav-ul">
           <ul class="navbar-nav ">
-            <li class="nav-item">
+            <li class="nav-item" style="padding-right: 8%;">
               <a class="nav-link" href="https://www.farjana-nipa.com/index.html">About</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" style="padding-right: 8%;">
               <a class="nav-link" href="https://www.farjana-nipa.com/works.html">Work</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" style="padding-right: 8%;">
               <a class="nav-link" href="https://www.farjana-nipa.com/notes.html">Notes</a>
             </li>
           </ul>
