--- a/notes.html
+++ b/notes.html
@@ -125,6 +125,11 @@
 
           </div>
           <div class="icons">
+            <p class="iconsId">
+              <!-- <img src="https://img.icons8.com/fluent/48/000000/visual-studio-2019.png"/> -->
+              <img src="https://img.icons8.com/nolan/64/visual-studio-2019.png"/>
+            </p>
+            <p class="skills"> Visual Studio </p> 
 
           </div>
         
