--- a/notes.html
+++ b/notes.html
@@ -37,7 +37,7 @@
             <li class="nav-item" style="padding-right: 8%;">
               <a class="nav-link" href="https://www.farjana-nipa.com/works.html">Work</a>
             </li>
-            <li class="nav-item" style="padding-right: 8%;">
+            <li class="nav-item">
               <a class="nav-link" href="https://www.farjana-nipa.com/notes.html">Notes</a>
             </li>
           </ul>
